WPP-76 credential validation, fix issues with last several Jira

--- a/src/main/webapp/css/webproxy-mobile.css
+++ b/src/main/webapp/css/webproxy-mobile.css
@@ -32,3 +32,11 @@
 .gateway-portlet .hidden {
     display:none;
 }
+
+.gateway-portlet .gateway-edit-link img {
+    margin-left: 3px;
+}
+
+.gateway-portlet .error-msg {
+    color: red;
+}
